writing with position done
